k8s-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
  annotations:
    argocd.argoproj.io/external-link: https://fortune-cookie.orbithr.com.br
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
